fix text alignment

--- a/src/comps/Browse.module.css
+++ b/src/comps/Browse.module.css
@@ -16,7 +16,8 @@
   text-align: center;
   font-size: 16px;
   font-weight: bold;
-  padding: 7.5px;
+  line-height: 18px;
+  padding: 8px;
   cursor: pointer;
 }
 
